# assets_generator

./: .gitignore  CMakeLists.txt  README.md
code/: assets_generator.cpp  assets_generator.h
